JSAI/error/src/test/resources/base/v010.js
function noop() { }

var x = noop();
print(x);